--- a/index.html
+++ b/index.html
@@ -12,19 +12,11 @@
 
 <div id="demo"><h2>Let AJAX change this text</h2></div>
 
-<button type="button" onclick="loadDoc()">Change Content</button>
+<button id="button1" type="button" onclick="loadDoc()">Change Content</button>
 
-<script>
-function loadDoc() {
-  var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-      document.getElementById("demo").innerHTML = this.responseText;
-    }
-  };
-  xhttp.open("GET", "text.txt", true);
-  xhttp.send();
-}
-</script>
+
+<div id="jquery-div">JQUERY AJAX</div>
+
+<button id="button2" type="button">Jquery Change!</button>
 </body>
 </html>
