--- a/index.html
+++ b/index.html
@@ -18,5 +18,18 @@
 <div id="jquery-div">JQUERY AJAX</div>
 
 <button id="button2" type="button">Jquery Change!</button>
+
+<script>
+  function loadDoc() {
+  var xhttp = new XMLHttpRequest();
+  xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+      document.getElementById("demo").innerHTML = this.responseText;
+    }
+  };
+  xhttp.open("GET", "text.txt", true);
+  xhttp.send();
+}
+</script>
 </body>
 </html>
