--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
 <button id="button2" type="button">Jquery Change!</button>
 
+<div id="jquery-2">Jquery 2 Ajax</div>
+
+<button id="button3" type="button">Jquery 2nd Change!</button>
+
 <script>
   function loadDoc() {
   var xhttp = new XMLHttpRequest();
