--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
 <button id="button3" type="button">Jquery 2nd Change!</button>
 
+<div id="json">Load Json DATA!</div>
+
+<button type="button" id="button4"> Release the JSON!!!</button>
+
 <script>
   function loadDoc() {
   var xhttp = new XMLHttpRequest();
