--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
 <div id="json">Load Json DATA!</div>
 
-<button type="button" id="button4"> Release the JSON!!!</button>
+<button type="button" id="button4"> Release the JSON!!!2</button>
+
+<div id="json2">Load Json DATA!</div>
+
+<button type="button" id="button5"> Release the JSON!!!2</button>
 
 <script>
   function loadDoc() {
