--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div id="demo"><h2>Let AJAX change this text</h2></div>
+<div id="demo">Let AJAX change this text</div>
 
 <button id="button1" type="button" onclick="loadDoc()">Change Content</button>
 
@@ -25,9 +25,9 @@
 
 <div id="json">Load Json DATA!</div>
 
-<button type="button" id="button4"> Release the JSON!!!2</button>
+<button type="button" id="button4"> Release the JSON!!!</button>
 
-<div id="json2">Load Json DATA!</div>
+<div id="json2">Load Json DATA!2</div>
 
 <button type="button" id="button5"> Release the JSON!!!2</button>
 
@@ -42,6 +42,8 @@
   xhttp.open("GET", "text.txt", true);
   xhttp.send();
 }
+document.write("text");
+
 </script>
 </body>
 </html>
