--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>blah</title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="script.js"></script>
 </head>
@@ -31,6 +31,25 @@
 
 <button type="button" id="button5"> Release the JSON!!!2</button>
 
+
+
+<form name="myForm" onsubmit="return validateForm()" method="post"> Name: <input type="text" name="fname" required> <input type="submit" value="Submit"> </form>
+
+<input id="id1" type="number" max="100">
+<button onclick="myFunction()">OK</button>
+
+<p id="demo2"></p>
+
+<input id="id2" type="text" maxLength="5"  placeholder="Enter string up to 5 chars" required>
+<button onclick="stringCheck()">Submit</button>
+
+<h1 id="demo3"></h1>
+
+<form name="emailForm" onsubmit="return" method="post">
+Email Address: <input type="email" name="email" required placeholder="Enter a valid email address">
+<input type="submit" value="Submit"> </form>
+
+
 <script>
   function loadDoc() {
   var xhttp = new XMLHttpRequest();
@@ -42,7 +61,24 @@
   xhttp.open("GET", "text.txt", true);
   xhttp.send();
 }
-document.write("text");
+
+function myFunction() {
+    var txt = "";
+    // document.getElementById("id2").maxLength = 10;
+    if (document.getElementById("id1").validity.rangeOverflow) {
+       txt = "Value too large";
+    }
+    document.getElementById("demo2").innerHTML = txt;
+}
+
+function stringCheck(){
+  var txt = "";
+  if (document.getElementById('id2').validity.tooLong){
+    txt = "Stop writting so damn much!";
+  }
+  document.getElementById("demo3").innerHTML = txt;
+}
+
 
 </script>
 </body>
