--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@ function stringCheck(){
   document.getElementById("demo3").innerHTML = txt;
 }
 
+var numbers = findMax(1, 123, 500, 115, 44, 88);
+
+function findMax() {
+    var i;
+    var max = -Infinity;
+    for (i = 0; i < arguments.length; i++) {
+        if (arguments[i] > max) {
+            max = arguments[i];
+        }
+    }
+    console.log(max);
+
+}
+
+
+
 
 </script>
 </body>
