--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@ src="https://www.youtube.com/embed/XGSy3_Czz8k">
 
 <img id="doggy"  alt="">
 
+
+<!-- <iframe width="420" height="315"
+src="https://www.youtube.com/embed/XGSy3_Czz8k?autoplay=1">
+</iframe> -->
+
+<!-- <iframe src="http://google.com" name="google" style="height:100px"></iframe> -->
+
 <script>
   function loadDoc() {
   var xhttp = new XMLHttpRequest();
@@ -108,6 +115,14 @@ function findMax() {
 }
 
 
+// document.getElementsByName('google')[0].onload = function() {
+//   frames[0].location = 'http://wikipedia.org'
+//   alert('Changed to wikipedia')
+// }
+
+// window.close();
+ // var x = navigator.cookieEnabled;
+ console.log(x);
 
 
 </script>
